<resources>
    <string name="app_name">DAREKEapp</string>
    <string name="login_text">DAREKEapp Login</string>
    <string name="sign_in">Sign In</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="hint_name">Name</string>
    <string name="hint_password_confirm">Confirm password</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">user.name@firebase.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_edit">Edit</string>
    <string name="action_share">Share</string>
    <string name="company_name">Name of company</string>
    <string name="worked_for_agent">Worked for agent?</string>
    <string name="agent_name">Agent name</string>
    <string name="shift_start">Shift start</string>
    <string name="shift_end">Shift end</string>
    <string name="break_taken">Break taken?</string>
    <string name="break_start_time">Break start time</string>
    <string name="break_end_time">Break end time</string>
    <string name="governed_by_driver_hours">Is the shift governed by driver hours?</string>
    <string name="vehicle_registration">Vehicle registration</string>
    <string name="darekeapp_info">Daily Record Keeper takes care of your shift management needs on a daily basis.</string>
    <string name="gdpr_statement"><b>GDPR Statement -</b> No data will be shared to third party. You will only be contacted regarding Daily Record Keeper products.</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="poa">How much POA did you incur during the shift?</string>
    <string name="poa_button_text">Add availability</string>
    <string name="drive_time">How much drive time did you accumulate during your shift?</string>
    <string name="title_activity_shift_log_data">Shift Log Data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
