<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/share_file_question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/what_should_the_share_file_include"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:gravity="center" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/share_file_name_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/share_file_question_text"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/hint_name" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/share_file_email_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/share_file_name_option"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/hint_email" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/share_file_email_option"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:text="@string/save"
        android:background="@drawable/round_edt" />
</RelativeLayout>
