<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/logo"
        android:contentDescription="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:src="@drawable/darekeapp_banner" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_name_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="10dp">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_edt"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/register_name"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_email_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_name_text_input_layout"
        android:layout_marginTop="10dp">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_edt"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_password_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_email_text_input_layout"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_edt"
            android:layout_below="@id/register_email_text_input_layout"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_confirm_password_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password_text_input_layout"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/register_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_edt"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/hint_password_confirm"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@+id/register_confirm_password_text_input_layout"
        android:text="@string/register"
        android:background="@drawable/round_login" />

    <ProgressBar
        android:id="@+id/register_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_confirm_password_text_input_layout"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_link_to_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        android:text="@string/sign_in"
        android:textSize="15sp"
        android:layout_below="@+id/btn_register"
        android:layout_centerInParent="true" />
</RelativeLayout>
