<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:scrollbarFadeDuration="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/company_name_data_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/company_name"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/company_name_data_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/company_name"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/worked_for_agent_data_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/worked_for_agent"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/worked_for_agent_data_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/worked_for_agent"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/agent_name_data_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/agent_name"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/agent_name_data_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/agent_name"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/shift_start_data_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/shift_start"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/shift_start_data_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/shift_start"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/shift_end_data_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/shift_end"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/shift_end_data_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/shift_end"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/break_taken_data_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/break_taken"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/break_taken_data_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/break_taken"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/break_start_time_data_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/break_start_time"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/break_start_time_data_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/break_start_time"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/break_end_time_data_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/break_end_time"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/break_end_time_data_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/break_end_time"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/governed_by_driver_hours_data_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/governed_by_driver_hours"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/governed_by_driver_hours_data_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/governed_by_driver_hours"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/vehicle_registration_data_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/vehicle_registration"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/vehicle_registration_data_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/vehicle_registration"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/poa_data_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/poa"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/poa_data_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/poa"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/drive_time_data_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/drive_time"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/drive_time_data_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/drive_time"
                android:textSize="18sp"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
